clusters/ocelot.archifleks.xyz/seed/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: seed
spec:
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr:1.2.4 # {"$imagepolicy": "seed:bazarr"}
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /seed
          name: seed
        - mountPath: /config
          name: config
        ports:
        - name: http
          containerPort: 6767
      securityContext:
        fsGroup: 1000
      volumes:
      - name: seed
        hostPath:
          # directory location on host
          path: /srv/hostpaths/seed
          # this field is optional
          type: DirectoryOrCreate
      - name: config
        hostPath:
          # directory location on host
          path: /srv/hostpaths/bazarr
          # this field is optional
          type: DirectoryOrCreate
