clusters/ocelot.archifleks.xyz/seed/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seed
  name: bazarr
spec:
  ports:
    - port: 6767
  selector:
    app: bazarr
  type: ClusterIP
